--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,20 @@
+
 <!DOCTYPE html>
 <html>
-  <link href="//db.onlinewebfonts.com/c/b46bb1fc76216f5cd90457d0451dbee4?family=Futura+Book" rel="stylesheet" type="text/css"/>
-<head>
-  <title>My Proxy</title>
-</head>
-<body>
-  <div id="productInfo"></div>
-  <script src="http://localhost:3002/main.bundle.js"></script>
-</body>
+	<head>
+		<meta charset="utf-8" />
+    <title>FEC PROXY SERVER</title>
+	</head>
+	<body>
+		<div id="FeatureExplorer"></div>
+		<div id="RelatedProducts"></div>
+		<div id="productInfo"></div>
+		<div id="reviews"></div>
+		<div id="Questions"></div>
+	</body>
 </html>
+<script src="http://localhost:3000/main.bundle.js"></script>
+<script src="http://localhost:3001/main.bundle.js"></script>
+<script src="http://localhost:3002/main.bundle.js"></script>
+<script src="http://localhost:7777/main.bundle.js"></script>
+<script src="http://localhost:3004/main.bundle.js"></script>
