--- a/client/index.html
+++ b/client/index.html
@@ -6,15 +6,15 @@
     <title>FEC PROXY SERVER</title>
 	</head>
 	<body>
+		<div id="productInfo"></div>
 		<div id="FeatureExplorer"></div>
 		<div id="RelatedProducts"></div>
-		<div id="productInfo"></div>
 		<div id="reviews"></div>
-		<div id="Questions"></div>
+		<div id="questions"></div>
 	</body>
-</html>
-<script src="http://localhost:3000/main.bundle.js"></script>
-<script src="http://localhost:3001/main.bundle.js"></script>
-<script src="http://localhost:3002/main.bundle.js"></script>
-<script src="http://localhost:7777/main.bundle.js"></script>
-<script src="http://localhost:3004/main.bundle.js"></script>
+</html><script src="http://3.138.107.143/main.bundle.js"></script> <!-- Ryan - Product Info-->
+<script src="http://3.101.127.251/main.bundle.js"></script> <!--Jon - Feature -->
+<script src="http://18.144.2.219/main.bundle.js"></script> <!-- Jon - Related Product-->
+<script src="http://3.131.135.129/main.bundle.js"></script>  <!-- Karin - Reviews -->
+<script src="http://54.183.5.42/main.bundle.js"></script> <!-- Rick - Questions -->
+
